Bug #18464 Can't make example storage engine available
Submitted: 23 Mar 2006 18:28 Modified: 31 Mar 2006 9:54
Reporter: Paul Whittington
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.1.7-beta OS:Linux (Linux)
Assigned to: Bugs System Target Version:

[23 Mar 2006 18:28] Paul Whittington
Description:
Specification of --with-example-storage-engine for configure does not make the example
storage engine available.

How to repeat:
Download 5.1.7-beta and configure it with 

./configure --prefix=/home/tester/mysql --without-innodb --with-example-storage-engine

then do 

make
make install

and

cd /home/tester/mysql
bin/mysql_install_db
share/mysql/mysql.server start

followed by

bin/mysql

and

use test;
show variables like 'have_%'

I got

+----------------------------+-------+
| Variable_name              | Value |
+----------------------------+-------+
| have_archive               | NO    |
| have_bdb                   | NO    |
| have_blackhole_engine      | NO    |
| have_compress              | YES   |
| have_crypt                 | YES   |
| have_csv                   | YES   |
| have_example_engine        | NO    |
| have_federated_engine      | NO    |
| have_geometry              | YES   |
| have_innodb                | NO    |
| have_ndbcluster            | NO    |
| have_openssl               | NO    |
| have_partitioning          | NO    |
| have_query_cache           | YES   |
| have_row_based_replication | YES   |
| have_rtree_keys            | YES   |
| have_symlink               | YES   |
+----------------------------+-------+
17 rows in set (0.00 sec)

Notice that have_example_engine is NO.

I expected have_example_engine to be YES.
[23 Mar 2006 23:22] Hartmut Holzgraefe
verified with latest 5.1bk source
[29 Mar 2006 0:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/4252
[30 Mar 2006 5:55] Antony Curtis
patch approved by kent
[30 Mar 2006 5:56] Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

pushed to 5.1.9-beta repository
[31 Mar 2006 9:54] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.1.9 changelog. Closed.
[21 Dec 2006 13:10] Arun Kumar
Does this problem was there in mysql-5.0.27 as well? As I am also getting similar
behavior.