Bug#18464   "Can't make example storage engine available" Build was attempting a shared-lib build instead of static

configure.in:
  configure example to be linked in
storage/csv/ha_tina.cc:
  don't want plugin symbols in mysqld
storage/example/Makefile.am:
  build as static library
storage/example/ha_example.cc:
  don't want plugin symbols in mysqld